# qsldcalc

./: .gitignore  CMakeLists.txt  ChangeLog.txt  README.md  README.txt  ReleaseNotes.txt  aliasnamedialog_8cpp__incl.md5  aliasnamedialog_8cpp_source.html  aliasnamedialog_8h.html  aliasnamedialog_8h_source.html  classAliasNameDialog.html  classAliasValidator.html  classElement.html  classErrorUnknownElement.html  classFormulaCompleter.html  classLangAction.html  classMainWindow.html  classes.html  datavisualizer_8cpp_source.html  datavisualizer_8h__incl.map  element_8cpp__incl.md5  element_8cpp_source.html  element_8h.html  element_8h__incl.md5  element_8h_source.html  elementdatabase_8cpp__incl.map  elementdatabase_8h.html  elementdatabase_8h__incl.map  elementdatabase_8h__incl.md5  formula.repository  formulacompleter_8cpp__incl.map  formulacompleter_8cpp__incl.md5  formulacompleter_8cpp_source.html  formulacompleter_8h.html  functions_0x62.html  functions_0x64.html  functions_0x67.html  functions_0x68.html  functions_0x6e.html  functions_0x6f.html  (+34 more)
doc/html/: aliasnamedialog_8cpp.html  aliasnamedialog_8cpp__incl.map  aliasnamedialog_8cpp_source.html  aliasnamedialog_8h.html  aliasnamedialog_8h__incl.md5  aliasnamedialog_8h_source.html  annotated.html  classAliasNameDialog.html  classAliasValidator.html  classDataVisualizer.html  classDrawingPositionFromPropertyVariant.html  classElement.html  classElementDatabase.html  classErrorUnknownElement.html  classFormulaCompleter.html  classInputData.html  classLangAction.html  classMainWindow.html  classMainWindow_1_1QStringFromBoostVariant.html  classPreparePropertyVariantForSorting.html  classXmlParser.html  classes.html  datavisualizer_8cpp.html  datavisualizer_8cpp__incl.map  datavisualizer_8cpp__incl.md5  datavisualizer_8cpp_source.html  datavisualizer_8h.html  datavisualizer_8h__incl.md5  datavisualizer_8h_source.html  element_8cpp.html  element_8cpp__incl.map  element_8cpp_source.html  element_8h.html  element_8h_source.html  elementdatabase_8cpp.html  elementdatabase_8cpp__incl.md5  elementdatabase_8cpp_source.html  elementdatabase_8h.html  elementdatabase_8h_source.html  files.html  (+75 more)
res/: qsldcalc.qrc  qsldcalc.rc
res/data/: Ac.xml  Ag.xml  Al.xml  Am.xml  Ar.xml  As.xml  At.xml  Au.xml  B.xml  Ba.xml  Be.xml  Bi.xml  Br.xml  C.xml  Ca.xml  Cd.xml  Ce.xml  Cl.xml  Cm.xml  Co.xml  Cr.xml  Cs.xml  Cu.xml  Dy.xml  Er.xml  Eu.xml  F.xml  Fe.xml  Fr.xml  Ga.xml  Gd.xml  Ge.xml  H.xml  He.xml  Hf.xml  Hg.xml  Ho.xml  I.xml  In.xml  Ir.xml  (+63 more)
res/lang/: language_de_DE.qm  language_de_DE.ts  language_en_GB.qm  language_en_GB.ts
src/: AddAppIconMacro.cmake  CMakeLists.txt  Doxyfile  aliasnamedialog.cpp  aliasnamedialog.h  aliasnamedialog.ui  datavisualizer.cpp  datavisualizer.h  datavisualizer.ui  element.cpp  element.h  elementdatabase.cpp  elementdatabase.h  formulacompleter.cpp  formulacompleter.h  inputdata.cpp  inputdata.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  utils.cpp  utils.h  xmlparser.cpp  xmlparser.h
src/doc/: footer.html
